[package]
name = "axum-proxy-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
tokio = { version = "1.27.0", features = ["full"] }
serde = {version = "1.0.159", features = ["derive"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"]}
anyhow = "1.0.66"
serde_json = "1.0.95"
tower-http = { version = "0.4.0", features = ["trace"] }
tower = { version = "0.4.13", features = ["make"] }
hyper = { version = "0.14.25", features = ["full"] }
once_cell = "1.17.1"
